--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,8 @@ li > a:hover{
 }
 
 .overview-hero-image img{
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
 }
 
 
@@ -74,12 +74,19 @@ li > a:hover{
 .cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 15px;
 }
 
 .card{
     border: 1px solid #E2E8F0;
     border-radius: 5px;
+    padding: 10px;
+    
+}
+
+.card img{
+    width: 300px;
+    height: 300px;
 }
 
 .card-body{
@@ -98,6 +105,7 @@ li > a:hover{
     margin: 30px 0;
     display: flex;
     align-items: center;
+    padding: 20px 0;
 }
 .testing .container{
     display: inline-flex;
