Added js functionality to newsletter button

--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,10 @@ article{
     margin-right: 10px;
     padding-left: 10px;
 }
-
+.message{
+    padding: 20px 0;
+    text-align: center;
+}
 .newsletter .btn{
     height: 40px;
     border: none;
